Adds advertisement and listing functionality.

--- a/src/components/SearchFunction/SearchBar/SearchBar.module.css
+++ b/src/components/SearchFunction/SearchBar/SearchBar.module.css
@@ -1,3 +1,6 @@
-.MakesRed {
-    border: 2px solid red;
+.SearchBar {
+    width: 50%;
+    height: 40px;
+    margin-right: 10px;
+    font-size: 20px;
 }
