--- a/src/components/SingleResult/SingleResult.module.css
+++ b/src/components/SingleResult/SingleResult.module.css
@@ -11,6 +11,20 @@ p {
     margin-bottom: 5px;
 }
 
+/* Ensures that lists are in the same line and not starting a new one */
+ul {
+    margin-left: 0px;
+    padding-left: 0px;
+    display: inline;
+}
+
+/* Used for displaying platform lists in a pleasant way */
+li {
+    display: inline;
+    margin: 0 5px;
+}
+
+/* Boxes each show/movie result */
 .box {
     border: 2px solid black;
     padding: 10px;
