--- a/src/components/Advertisement/Advertisement.module.css
+++ b/src/components/Advertisement/Advertisement.module.css
@@ -1,5 +1,5 @@
-.Advertisement {
-    text-align: center;    
+.Netflix {
+    text-align: center;
     margin: auto;
     background-color: red;
     width: 45%;
@@ -7,7 +7,35 @@
     border-radius: 10px;
 }
 
-.Advertisement a {
+.Amazon {
+    text-align: center;
+    margin: auto;
+    background-color: blue;
+    width: 45%;
+    font-size: 25px;
+    border-radius: 10px;
+}
+
+.HBO {
+    text-align: center;
+    margin: auto;
+    background-color: black;
+    width: 45%;
+    font-size: 25px;
+    border-radius: 10px;
+}
+
+.Amazon a {
+    text-decoration: none;
+    color: white;
+}
+
+.Netflix a {
+    text-decoration: none;
+    color: white;
+}
+
+.HBO a {
     text-decoration: none;
     color: white;
 }
