big update: now displaying suggested movies/shows, formatted those, added a method to MarketedSearch to ensure that there are at least 3 suggested shows

--- a/src/components/ClickedContent/ClickedContent.module.css
+++ b/src/components/ClickedContent/ClickedContent.module.css
@@ -15,3 +15,25 @@ table {
     border-collapse: collapse;
     width: 100%;
 }
+
+
+.suggested td {
+    width: 33%;
+    height: 100%
+}
+
+.suggested tr {
+    height: 150pt;
+}
+
+.suggested h1{
+    font-size: 15px;
+    margin-top: 5px;
+    margin-bottom: 5px;
+}
+
+.suggested p{
+    font-size: 10px;
+    margin-top: 5px;
+    margin-bottom: 5px;
+}
