--- a/src/components/results/Results.module.css
+++ b/src/components/results/Results.module.css
@@ -4,3 +4,32 @@
     padding: 5px;
     margin: auto;
 } */
+
+/* table {
+    table-layout: fixed ;
+    width: 100% ;
+    height: 100%;
+    align-content: top;
+  }
+  td {
+    width: 25% ;
+    height: 150px;
+  } */
+
+  .results table {
+	height: 400px;
+	width: 400px;
+	margin: 10; padding: 10;
+	border-collapse: collapse;
+}
+.results td { 
+	border: 3px solid rgb(2, 2, 2);
+	border-spacing: 10;
+	height: 100px;
+	width: 100px;
+    margin: 50; padding: 50;
+    align-content: stretch;
+    
+}
+
+
