--- a/src/components/Layout/Layout.module.css
+++ b/src/components/Layout/Layout.module.css
@@ -3,8 +3,12 @@
 }
 
 .Centered {
+    padding: 25px;
     text-align: center;
     align-content: center;
+    font-size: 50px;
+    font-weight: bold;
+    
 }
 
 .Header {
